# google-api-cpp-client

./: CMakeLists.txt  DEPENDENCIES.txt  build.sh
service_apis/: CMakeLists.txt
service_apis/calendar/google/calendar_api/: CMakeLists.txt
service_apis/storage/: CMakeLists.txt  descriptor.json
service_apis/storage/google/storage_api/: CMakeLists.txt  bucket.cc  bucket.h  bucket_access_control.cc  bucket_access_control.h  bucket_access_controls.cc  bucket_access_controls.h  buckets.cc  buckets.h  channel.cc  channel.h  compose_request.cc  compose_request.h  object.cc  object.h  object_access_control.cc  object_access_control.h  object_access_controls.cc  object_access_controls.h  objects.cc  objects.h  rewrite_response.cc  rewrite_response.h  storage_api.h  storage_service.cc  storage_service.h
src/googleapis/: CMakeLists.txt
src/googleapis/client/: CMakeLists.txt
src/googleapis/client/auth/: jwt_builder.cc  oauth2_authorization.cc
src/googleapis/client/data/: jsoncpp_data.cc  jsoncpp_data.h  jsoncpp_data_helpers.h
src/googleapis/client/data/test/: jsoncpp_data_test.cc
src/googleapis/client/test/google/wax_api/: CMakeLists.txt
src/googleapis/client/transport/: curl_http_transport.cc  http_transport.cc  http_transport.h  json_playback_transport.cc  json_scribe.cc  json_scribe.h
